--- a/index.html
+++ b/index.html
@@ -1,11 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jess' Portfolio</title>
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Jura&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <!-- Nav bar section -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Jessica's Portfolio</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Work</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- Jumbotron Code -->
+    <div class="p-5 mb-4 bg-body-tertiary rounded-3">
+        <div class="container-fluid py-5">
+            <h1 class="display-5 fw-bold">Welcome to my portfolio!</h1>
+            <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in
+                previous
+                versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.
+            </p>
+            <button class="btn btn-primary btn-lg" type="button">Example button</button>
+        </div>
+    </div>
+    <!-- My work section/look at last week examples to see if you showuld add a main tag -->
+    <!-- Cards -->
+    <div class="container-fluid">
+        <h1 class="sectionHeading"> My Skills </h1>
+        <div class="row" class="showsNear">
+            <!-- Card 1 -->
+            <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+                <div class="card">
+                    <img src="images/show1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">MATLAB</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's
+                            content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <!-- End card 1 -->
+
+            <!-- Card 2 -->
+            <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+                <div class="card">
+                    <img src="images/show2.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">CSS & HTML</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's
+                            content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <!-- End card 2 -->
+
+            <!-- Card 3 -->
+            <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+                <div class="card">
+                    <img src="images/show3.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Javascript</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's
+                            content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <!-- End card 3 -->
+
+        </div>
+    </div>
+    <!-- End cards -->
+    <!-- Content -->
+    <div class="container-fluid">
+
+        <!-- Row 1 -->
+        <div class="row">
+            <div class="sideAccent">
+            </div>
+            <div class="col-3">
+                <img src="images/assistance.png">
+            </div>
+            <div class="col-8">
+                <h3>My Work</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet.
+                </p>
+                <a href="#" class="btn btn-primary">Contact Us
+                </a>
+            </div>
+        </div>
+        <!-- End row 1 -->
+
+
+    </div>
+    <!-- End content -->
+    <!-- Footer -->
+    <footer>
+        <p> Facebook Twitter LinkedIn</p>
+    </footer>
+    <!-- End footer -->
+
+
 </body>
+
 </html>
