--- a/index.html
+++ b/index.html
@@ -24,13 +24,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Skills</a>
+                        <a class="nav-link" href="#about me">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Work</a>
+                        <a class="nav-link" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#work">Work Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact Me</a>
                     </li>
                 </ul>
             </div>
@@ -47,15 +50,63 @@
             <button class="btn btn-primary btn-lg" type="button">Example button</button>
         </div>
     </div>
+
+    <!-- About Me section-->
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <h1 class="sectionHeading" id="about me"> About Me! </h1>
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="../Bootstrap-portfolio/images/02-portfolio-4.jpg" class="d-block w-75 carouselimage" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Who Am I?</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="../Bootstrap-portfolio/images/amazon-prime.webp" class="d-block w-75 carouselimage" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Education</h5>
+                    <p>Some representative placeholder content for the second slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="../Bootstrap-portfolio/images/furniture1.jpg" class="d-block w-75 carouselimage" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Extra-curricular</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev position-absolute" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+
     <!-- My work section/look at last week examples to see if you showuld add a main tag -->
     <!-- Cards -->
-    <div class="container-fluid">
+    <div class="container-fluid" id="skills">
         <h1 class="sectionHeading"> My Skills </h1>
         <div class="row" class="showsNear">
             <!-- Card 1 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                 <div class="card">
-                    <img src="images/show1.jpg" class="card-img-top" alt="...">
+                    <img src="images/python9.webp" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">MATLAB</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -70,7 +121,7 @@
             <!-- Card 2 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                 <div class="card">
-                    <img src="images/show2.jpg" class="card-img-top" alt="...">
+                    <img src="images/amazon-prime.webp" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">CSS & HTML</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -85,7 +136,7 @@
             <!-- Card 3 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                 <div class="card">
-                    <img src="images/show3.jpg" class="card-img-top" alt="...">
+                    <img src="images/furniture1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Javascript</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -101,14 +152,14 @@
     </div>
     <!-- End cards -->
     <!-- Content -->
-    <div class="container-fluid">
+    <div class="container-fluid" id="work">
 
         <!-- Row 1 -->
         <div class="row">
             <div class="sideAccent">
             </div>
             <div class="col-3">
-                <img src="images/assistance.png">
+                <img src="../Bootstrap-portfolio/images/digital-marketing-meeting.jpg">
             </div>
             <div class="col-8">
                 <h3>My Work</h3>
@@ -125,10 +176,15 @@
     </div>
     <!-- End content -->
     <!-- Footer -->
-    <footer>
+    <footer id="contact">
+        <h1>Contact Me</h1>
         <p> Facebook Twitter LinkedIn</p>
     </footer>
     <!-- End footer -->
+    <!-- bootstrap javascript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
 
 </body>
