Links in footer working

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="row" class="showsNear">
             <!-- Card 1 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
-                <div class="card" >
+                <div class="card">
                     <img src="images/watchlist.png" class="card-img-top" alt="Movie Tracker watchList page">
                     <div class="card-body bg-dark">
                         <h5 class="card-title">Movie Tracker</h5>
@@ -129,7 +129,8 @@
                             remove
                             the movie from the watchlist. Click on the movie poster for more information.
                         </p>
-                        <a href="https://kylogg88.github.io/NicodingProject1/" alt="Visit Movie Tracker webpage!"  class="btn btn-info">Go to App</a>
+                        <a href="https://kylogg88.github.io/NicodingProject1/" alt="Visit Movie Tracker webpage!"
+                            class="btn btn-info">Go to App</a>
                     </div>
                 </div>
             </div>
@@ -141,12 +142,15 @@
                     <img src="images/horison.png" class="card-img-top" alt="Staff meeting">
                     <div class="card-body bg-dark">
                         <h5 class="card-title">Horiseon marketing website</h5>
-                        <p class="card-text">This project is a website for a marketing company named Horiseon. 
-                            This project was built to become familiar with the use of HTML for structuring a webpage and CSS for 
-                            styling using class attributes, alongside building a stylish website for Horiseon. During the course of 
-                            this project the interlink between the HTML and relative CSS file was understood and how each element works 
+                        <p class="card-text">This project is a website for a marketing company named Horiseon.
+                            This project was built to become familiar with the use of HTML for structuring a webpage and
+                            CSS for
+                            styling using class attributes, alongside building a stylish website for Horiseon. During
+                            the course of
+                            this project the interlink between the HTML and relative CSS file was understood and how
+                            each element works
                             to create features on the webpage.
-                           </p>
+                        </p>
                         <a href="https://jessi994.github.io/jess-marketing-website/" class="btn btn-info">Go to App</a>
                     </div>
                 </div>
@@ -155,16 +159,16 @@
 
             <!-- Card 3 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
-                <div class="card" >
+                <div class="card">
                     <img src="images/reademe-generator.png" class="card-img-top" alt="A generated README file">
                     <div class="card-body bg-dark">
                         <h5 class="card-title">README generator</h5>
                         <p class="card-text">This project generates a README file in the utils folder of this repo.
-                             This project was built to become familiar with the use of node.js for future work with 
-                             react, alongside building a handy README generator for developers. During the course of 
-                             this project the functionality of the inquirer library was understood and used to recieve 
-                             input from the user and the fs library was used to write the README file.
-                            </p>
+                            This project was built to become familiar with the use of node.js for future work with
+                            react, alongside building a handy README generator for developers. During the course of
+                            this project the functionality of the inquirer library was understood and used to recieve
+                            input from the user and the fs library was used to write the README file.
+                        </p>
                         <a href="https://github.com/jessi994/Readme-generator.git" class="btn btn-info">Go to repo</a>
                     </div>
                 </div>
@@ -177,23 +181,25 @@
     <!-- Content -->
     <div class="container-fluid" id="skills">
 
-        <!-- Row 1 -->
-        <div class="row">
-            <div class="sideAccent">
-            </div>
-            <div class="col-3">
-                <img src="">
-            </div>
-            <div class="col-8">
-                <h3>My skills</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet.
-                </p>
-                <a href="#" class="btn btn-primary">Contact Us
-                </a>
-            </div>
+        <h3>My skills</h3>
+        <div class="container p-4 pb-0">
+            
+            <!-- Section: Social media -->
+            <section class="mb-4">
+                <!-- Instagram -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-instagram"></i></a>
+
+                <!-- Linkedin -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-linkedin-in"></i></a>
+
+                <!-- Github -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-github"></i></a>
+            </section>
+            <!-- Section: Social media -->
         </div>
-        <!-- End row 1 -->
 
 
     </div>
@@ -207,16 +213,16 @@
             <div class="container p-4 pb-0">
                 <!-- Section: Social media -->
                 <section class="mb-4">
-                    <!-- Instagram -->
-                    <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
-                            class="fab fa-instagram"></i></a>
+                    <!-- Yahoo -->
+                    <a class="btn btn-outline-light btn-floating m-1" href="mailto:jessied200@yahoo.co.uk" role="button"><i
+                        class="fa-brands fa-yahoo"></i></a> 
 
                     <!-- Linkedin -->
-                    <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                    <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/jessica-dennis-9b04a4265/" role="button"><i
                             class="fab fa-linkedin-in"></i></a>
 
                     <!-- Github -->
-                    <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                    <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/jessi994" role="button"><i
                             class="fab fa-github"></i></a>
                 </section>
                 <!-- Section: Social media -->
