Skills section complete

--- a/index.html
+++ b/index.html
@@ -179,26 +179,22 @@
     </div>
     <!-- End cards -->
     <!-- Content -->
-    <div class="container-fluid" id="skills">
+    <div class="container-fluid " id="skills">
 
         <h3>My skills</h3>
         <div class="container p-4 pb-0">
-            
-            <!-- Section: Social media -->
-            <section class="mb-4">
-                <!-- Instagram -->
-                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
-                        class="fab fa-instagram"></i></a>
 
-                <!-- Linkedin -->
-                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
-                        class="fab fa-linkedin-in"></i></a>
 
-                <!-- Github -->
-                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
-                        class="fab fa-github"></i></a>
-            </section>
-            <!-- Section: Social media -->
+
+            <ul class="list-group list-group-flush text-center">
+                <li class="list-group-item  bg-dark text-white">Javascript <i class="fa-brands fa-js"></i></li>
+                <li class="list-group-item bg-dark text-white">Python <i class="fa-brands fa-python"></i></li>
+                <li class="list-group-item bg-dark text-white">React <i class="fa-brands fa-react"></i></li>
+                <li class="list-group-item bg-dark text-white">Bootstrap <i class="fa-brands fa-bootstrap"></i></li>
+                <li class="list-group-item bg-dark text-white">node.js <i class="fa-brands fa-node"></i></li>
+            </ul>
+           
+
         </div>
 
 
@@ -214,16 +210,17 @@
                 <!-- Section: Social media -->
                 <section class="mb-4">
                     <!-- Yahoo -->
-                    <a class="btn btn-outline-light btn-floating m-1" href="mailto:jessied200@yahoo.co.uk" role="button"><i
-                        class="fa-brands fa-yahoo"></i></a> 
+                    <a class="btn btn-outline-light btn-floating m-1" href="mailto:jessied200@yahoo.co.uk"
+                        role="button"><i class="fa-brands fa-yahoo"></i></a>
 
                     <!-- Linkedin -->
-                    <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/jessica-dennis-9b04a4265/" role="button"><i
+                    <a class="btn btn-outline-light btn-floating m-1"
+                        href="https://www.linkedin.com/in/jessica-dennis-9b04a4265/" role="button"><i
                             class="fab fa-linkedin-in"></i></a>
 
                     <!-- Github -->
-                    <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/jessi994" role="button"><i
-                            class="fab fa-github"></i></a>
+                    <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/jessi994"
+                        role="button"><i class="fab fa-github"></i></a>
                 </section>
                 <!-- Section: Social media -->
             </div>
