Carousel is finalised

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#about me">About Me</a>
+                        <a class="nav-link" href="#research">University research</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#work">Projects</a>
@@ -63,7 +63,7 @@
 
     <!-- About Me section-->
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-        <h1 class="sectionHeading" id="about me"> About Me! </h1>
+        <h2 class="sectionHeading" id="research"> My Research! </h2>
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
@@ -74,25 +74,26 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../Bootstrap-portfolio/images/02-portfolio-4.jpg" class="d-block w-75 carouselimage"
-                    alt="...">
+                <img src="../Bootstrap-portfolio/images/Neuropace project.png" class="d-block w-75 carouselimage" alt="Brain and Neuropace RNS logo">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Who Am I?</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <h5>Medical technologies: Design and development</h5>
+                    <p>Learned about the journey of the Neuropace RNS device from the stage of an idea to impact. Investigated the various facets of medical device design, development, and commercialisation.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../Bootstrap-portfolio/images/amazon-prime.webp" class="d-block w-75 carouselimage" alt="...">
+                <img src="../Bootstrap-portfolio/images/Whitematterpathways.jpg" class="d-block w-75 carouselimage"
+                    alt="White matter tracts of the brain">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Education</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
+                    <h5>BEng Research Project</h5>
+                    <p>Measuring capacity of information flow in white matter pathways of the preterm brain at adolesence</p>
                 </div>
+                
             </div>
             <div class="carousel-item">
-                <img src="../Bootstrap-portfolio/images/furniture1.jpg" class="d-block w-75 carouselimage" alt="...">
+                <img src="../Bootstrap-portfolio/images/Medical.png" class="d-block w-75 carouselimage dark-img" alt="Lady at an airport">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Extra-curricular</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
+                    <h5>Across Medical</h5>
+                    <p>Across provides people worldwide with a secure means of accessing their health information on-the-go. Role: full-stack developer</p>
                 </div>
             </div>
         </div>
@@ -112,7 +113,7 @@
     <!-- My work section/look at last week examples to see if you showuld add a main tag -->
     <!-- Cards -->
     <div class="container-fluid" id="work">
-        <h1 class="sectionHeading"> My projects </h1>
+        <h2 class="sectionHeading"> My projects </h2>
         <div class="row" class="showsNear">
             <!-- Card 1 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
@@ -178,7 +179,7 @@
         </div>
     </div>
     <!-- End cards -->
-    <!-- Content -->
+    <!-- List of skills -->
     <div class="container-fluid " id="skills">
 
         <h3>My skills</h3>
@@ -193,7 +194,7 @@
                 <li class="list-group-item bg-dark text-white">Bootstrap <i class="fa-brands fa-bootstrap"></i></li>
                 <li class="list-group-item bg-dark text-white">node.js <i class="fa-brands fa-node"></i></li>
             </ul>
-           
+
 
         </div>
 
@@ -205,6 +206,7 @@
     <div class="container my-5">
 
         <footer class="bg-dark text-center text-white" id="contact">
+            <h3>Contact Me</h3>
             <!-- Grid container -->
             <div class="container p-4 pb-0">
                 <!-- Section: Social media -->
@@ -226,12 +228,16 @@
             </div>
             <!-- Grid container -->
 
-            <!-- Copyright -->
+            <!-- Download CV button -->
+
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-                © 2024 Copyright
-                <!-- <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a> -->
+                <a href="https://1drv.ms/w/s!AovqLmArFk3x8AYfdTy37BFfoK-T?e=yUEedc">
+                    <button class="btn btn1"><i class="fa fa-download"></i> Download CV</button>
+
+                </a>
             </div>
-            <!-- Copyright -->
+
+            <!-- Download CV button -->
         </footer>
 
     </div>
