--- a/index.html
+++ b/index.html
@@ -54,11 +54,10 @@
             <h1 class="display-5 fw-bold">Welcome to my portfolio! <img class="img9" src="images/profile image.JPG" alt="Profile image of Jessica"></h1>
             
             <p class="col-md-8 fs-4">
-                Hi, 🙋‍♀️ I'm Jess and I am passionate about engineering and web development. As an engineer, I find
-                fulfillment in turning innovative ideas into pratical solutions that have a positive impact
-                on the world. My expertise spans medical imaging, coding and machiene learning, and I'm well-versed
-                in the latest technologies and tools in the field. I'm constantly seeking oppertunities to stay at the
-                forefront of engineering advancements.
+                Hi there, I'm Jess and I am passionate about engineering and web development. As an engineer, I find
+                fulfillment in turning innovative ideas into pratical solution. My expertise spans medical imaging, coding and machine learning, 
+                and I'm well-versed in the latest technologies and tools in the field. I'm constantly seeking oppertunities to stay at the
+                forefront of engineering and software advancements.
 
             </p>
         </div>
@@ -82,8 +81,8 @@
                     alt="Brain and Neuropace RNS logo">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Medical technologies: Design and development</h5>
-                    <p>Learned about the journey of the Neuropace RNS device from the stage of an idea to impact.
-                        Investigated the various facets of medical device design, development, and commercialisation.
+                    <p>Gained insight into the development journey of the Neuropace RNS device, from concept to the stage of real-world impact.
+                        Explored key aspects of medical device design, development, and commercialisation.
                     </p>
                 </div>
             </div>
