--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <h1 class="display-5 fw-bold">Welcome to my portfolio! <img class="img9" src="images/profile image.JPG" alt="Profile image of Jessica"></h1>
             
             <p class="col-md-8 fs-4">
-                Hi there, I'm Jess and I am passionate about engineering and web development. As an engineer, I find
-                fulfillment in turning innovative ideas into pratical solution. My expertise spans medical imaging, coding and machine learning, 
+                Hi there, I'm Jess and I am a Biomedical engineer and software developmener. As an engineer, I find
+                fulfillment in turning innovative ideas into pratical solutions. My expertise spans medical imaging, coding and machine learning, 
                 and I'm well-versed in the latest technologies and tools in the field. I'm constantly seeking oppertunities to stay at the
                 forefront of engineering and software advancements.
 
