--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="p-5 mb-4 bg-body-tertiary rounded-3 Jumbotron">
         <div class="container-fluid py-5 ">
-            <h1 class="display-5 fw-bold">Welcome to my portfolio! <img class="img9" src="images/Self image.jpg" alt="Profile image of Jessica"></h1>
+            <h1 class="display-5 fw-bold">Welcome to my portfolio! <img class="img9" src="images/Self Image.jpg" alt="Profile image of Jessica"></h1>
             
             <p class="col-md-8 fs-4">
                 Hi there, I'm Jess and I am a Biomedical engineer and software developmener. As an engineer, I find
