Update index.html personal summary

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             <h1 class="display-5 fw-bold">Welcome to my portfolio! <img class="img9" src="images/Self Image.jpg" alt="Profile image of Jessica"></h1>
             
             <p class="col-md-8 fs-4">
-                Hi there, I'm Jess and I am a Biomedical engineer and software developmener. As an engineer, I find
-                fulfillment in turning innovative ideas into pratical solutions. My expertise spans medical imaging, coding and machine learning, 
-                and I'm well-versed in the latest technologies and tools in the field. I'm constantly seeking oppertunities to stay at the
+                Hello, I'm Jess, a Biomedical engineer and software developer. I find great
+                fulfillment in transforming innovative ideas into practical solutions. My expertise includes medical imaging, coding and machine learning, and
+                I'm well-versed in the latest technologies and tools in the field. I am constantly seeking opportunities to stay at the
                 forefront of engineering and software advancements.
 
             </p>
